gpaste/paste/static/styles/css/main.css
/* Layout and nav style */
@font-face {
  font-family: 'infinite_strokebolder';
  src: url(/static/fonts/infinite-stroke.bolder-webfont.woff2) format("woff2"), url(/static/fonts/infinite-stroke.bolder-webfont.woff) format("woff");
  font-weight: normal;
  font-style: normal; }
body {
  background-color: #242331;
  font-family: Droid Sans;
  color: #AEB4A9;
  margin: auto;
  width: 100%; }

.nav {
  padding-bottom: 15px; }
  .nav ul {
    list-style-type: none;
    font-family: 'infinite_strokebolder';
    font-size: 58px;
    overflow: hidden;
    top: 0;
    width: 100%;
    border-bottom: 1px solid #000000;
    background-color: #29274b;
    margin: 0;
    padding: 0; }
  .nav li {
    float: center; }
  .nav a {
    display: block;
    color: #BB7C09;
    text-shadow: -1px -1px 0 #242331, 1px -1px 0 #242331, -1px 1px 0 #242331, 1px 1px 0 #242331;
    text-align: center;
    padding: 0px;
    text-decoration: none; }

/* Homepage */
#content-field {
  padding: 0px 10px 10px 10px;
  height: 100%; }
  #content-field textarea {
    box-sizing: border-box;
    width: 100%;
    background-color: #242331;
    color: #F0EAD6;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    border-color: #BB7C09;
    border-width: 1px;
    outline: none;
    resize: none;
    height: 70vh;
    font-family: inherit;
    font-size: 11pt;
    -webkit-transition: box-shadow 0.30s ease-in-out;
    -moz-transition: box-shadow 0.30s ease-in-out;
    -ms-transition: box-shadow 0.30s ease-in-out;
    -o-transition: box-shadow 0.30s ease-in-out; }
  #content-field textarea:focus {
    box-shadow: 0 0 3px #BB7C09; }
  #content-field #user-controls {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    flex-direction: row;
    padding-top: 3px; }
    #content-field #user-controls #language {
      margin-right: 3px; }

label {
  opacity: .65;
  font-size: 10pt; }

button {
  border: none;
  padding: 5px 25px;
  border-color: #29274b;
  font-size: 12pt;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  color: #F0EAD6;
  background-color: rgba(187, 124, 9, 0.95); }

button:hover {
  color: #fff;
  background-color: #BB7C09; }

#encrypt-button {
  display: inline-block;
  position: relative;
  top: 6px;
  left: 2px;
  padding: 0;
  margin: 0;
  border: 0;
  outline: 0;
  background: transparent; }

#encrypt-button:hover {
  opacity: .75; }

.icon {
  width: 25px;
  height: 25px;
  pointer-events: none; }

select {
  padding: 3px 20px;
  font-family: inherit;
  font-size: 11pt;
  border-radius: 2px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px; }

/* Content Page */
#paste-content {
  display: none;
  width: 100%;
  /* for block of code */ }
  #paste-content pre {
    margin: 0;
    padding: 0px 10px 0px 10px; }
  #paste-content td.hljs-ln-numbers {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    text-align: center;
    color: #fff;
    opacity: 0.32;
    border-right: 1px solid rgba(187, 124, 9, 0.75);
    vertical-align: top;
    padding-right: 5px; }
  #paste-content td.hljs-ln-code {
    padding-left: 10px; }
  #paste-content #paste {
    padding-top: 2px; }
  #paste-content #top {
    text-align: center;
    padding-bottom: 5px; }
  #paste-content #content-helpers {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    flex-direction: row; }
    #paste-content #content-helpers p {
      margin: 0;
      font-size: 13px;
      padding: 2px 0px 0px 10px;
      opacity: .55; }
  #paste-content a:link {
    padding-right: 12px;
    font-size: 13px;
    color: #BB7C09;
    text-decoration: none; }
  #paste-content a:hover {
    opacity: 0.85; }

/* 404 Page */
#invalid-page {
  text-align: center;
  height: 75vh;
  margin: 0;
  padding: 0; }
  #invalid-page img {
    padding: 0;
    display: block;
    margin: 0 auto;
    max-height: 100%;
    max-width: 100%; }
  #invalid-page p {
    color: #F0EAD6;
    opacity: .8; }

/* Scrollbar */
::-moz-scrollbar {
  width: .4em;
  height: .4em; }

::-moz-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }

::-moz-scrollbar-thumb {
  background-color: #F0EAD6;
  outline: 20px solid #BB7C09;
  border-radius: 3px;
  -webkit-border-radius: 3px; }

::-webkit-scrollbar {
  width: .4em;
  height: .4em; }

::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }

::-webkit-scrollbar-thumb {
  background-color: #F0EAD6;
  outline: 20px solid #BB7C09;
  border-radius: 3px;
  -webkit-border-radius: 3px; }

/* Modal */
.modal {
  position: fixed;
  top: 35%;
  left: 50%;
  width: 100%;
  max-width: 500px;
  height: auto;
  z-index: 5000;
  visibility: hidden;
  -webkit-backface-visibility: hidden;
  -moz-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -moz-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%); }

.md-overlay {
  position: fixed;
  width: 100%;
  height: 100%;
  visibility: hidden;
  top: 0;
  left: 0;
  z-index: 1000;
  opacity: 0;
  background: rgba(0, 0, 0, 0.8);
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s; }

.md-show.md-overlay {
  opacity: 1;
  visibility: visible; }

.md-show {
  visibility: visible; }

.modal-effect .modal-content {
  -webkit-transform: scale(0.7);
  -moz-transform: scale(0.7);
  -ms-transform: scale(0.7);
  transform: scale(0.7);
  opacity: 0;
  -webkit-transition: all 0.3s;
  -moz-transition: all 0.3s;
  transition: all 0.3s; }

.md-show.modal-effect .modal-content {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  opacity: 1; }

.modal-content {
  background-color: #242331;
  border: 1px solid #BB7C09;
  border-radius: 2px; }

.close {
  color: #F0EAD6;
  float: right;
  font-size: 25px;
  font-weight: bold; }

.close:hover,
.close:focus {
  opacity: .8;
  text-decoration: none;
  cursor: pointer; }

.modal-header {
  padding: 5px 10px;
  background-color: #29274b;
  color: #F0EAD6;
  border-bottom: 1px solid #000; }
  .modal-header h2 {
    margin: 0; }

.modal-footer {
  border-top: 1px solid #000;
  text-align: right;
  background-color: #29274b; }
  .modal-footer button {
    margin: 10px 10px 10px 0px; }

.modal-body {
  display: flex;
  flex-direction: row;
  margin: 20px 0px 20px 10px;
  justify-content: center;
  align-items: center; }
  .modal-body object {
    display: inline-flex;
    padding: 4px 4px 4px 4px;
    border: 1px solid #BB7C09;
    border-radius: 2px 0px 0px 2px;
    border-right: 0;
    background-color: #29274b;
    height: 24px;
    width: 24px; }
  .modal-body input[type=password] {
    display: inline-flex;
    padding-left: 4px;
    padding-right: 4px;
    background-color: #242331;
    border-width: 1px;
    border-color: #BB7C09;
    border-style: solid;
    border-radius: 0px 2px 2px 0px;
    outline: 0;
    width: 60%;
    height: 30px;
    font-size: 40px;
    color: #F0EAD6;
    -webkit-transition: all 0.30s ease-in-out;
    -moz-transition: all 0.30s ease-in-out;
    -ms-transition: all 0.30s ease-in-out;
    -o-transition: all 0.30s ease-in-out; }
  .modal-body input[type=password]:focus {
    box-shadow: 0 0 3px #BB7C09; }

/*# sourceMappingURL=main.css.map */

